Code list item path organized
Signed-off-by: janobono <janobono@gmail.com>